--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     <footer>
         <p>&copy; 2024 My Website. All rights reserved.</p>
     </footer>
+    <script src="main.js"></script>
 </body>
 </html>
