--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
+    <script src="main.js"></script>
     <!-- Add any additional meta tags, stylesheets, or scripts here -->
 </head>
 <body>
