--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
     <script src="main.js" defer></script>
+    <script src="script.js"></script>
+
     <!-- Add any additional meta tags, stylesheets, or scripts here -->
 </head>
 <body>
