--- a/index.html
+++ b/index.html
@@ -3,30 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-    <script src="main.js" defer></script>
-    <script src="script.js"></script>
-
-    <!-- Add any additional meta tags, stylesheets, or scripts here -->
+    <title>Index Page</title>
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Website</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
-    <main>
-        <h2>Content Goes Here</h2>
-        <p>This is a placeholder for your content. You can replace it with your own text, images, videos, etc.</p>
-    </main>
-    <footer>
-        <p>&copy; 2024 My Website. All rights reserved.</p>
-    </footer>
-    <script src="main.js"></script>
+    <h1>Welcome to the Index Page</h1>
+    <!-- Include your main.js file -->
+    <script src="script.js" defer></script>
 </body>
 </html>
